Closed Bug 1268341 Opened 9 years ago Closed 9 years ago

Suppress gdk deprecated warning

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla49
Tracking Status
firefox49 --- fixed

People

(Reporter: khuey, Assigned: khuey)

Details

(Whiteboard: btpp-active)

Attachments

(1 file)

Attached patch PatchSplinter Review
This annoys me when rebuilding dom/
Attachment #8746361 - Flags: review?(bugs)
Comment on attachment 8746361 [details] [diff] [review] Patch Fine to me, but could we actually use some non-deprecated function here?
Attachment #8746361 - Flags: review?(bugs) → review?(karlt)
Whiteboard: btpp-active
Comment on attachment 8746361 [details] [diff] [review] Patch (In reply to Olli Pettay [:smaug] from comment #1) > Fine to me, but could we actually use some non-deprecated function here? While the GTK2 port is alive, and RedHat will maintain this for some time, I expect, these warnings are not helpful, because we'd need two code paths more often. Even for GTK3 only, this is non-trivial as the newer gdk_device_ungrab needs the device from the button press event, or maybe this could be restricted to the core pointer. There an open bug on these somewhere. If these are spread too far and wide, then GDK_DISABLE_DEPRECATION_WARNINGS could be set in TK_FLAGS, extending the approach of https://bugzilla.mozilla.org/show_bug.cgi?id=1257695
Attachment #8746361 - Flags: review?(karlt) → review+
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: