Bug 1268341: Suppress gdk deprecation warning in ContentParent. r=karlt